--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Calculator Flask - New</title>
+    <title>Simple Calculator Flask</title>
 </head>
 <body>
-    <h1>Simple Calculator - Latest</h1>
+    <h1>Simple Calculator - Commit Created on 15th April</h1>
     <form method="post">
         <label for="num1">Number 1:</label>
         <input type="text" name="num1" required>
