--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Simple Calculator Flask</title>
 </head>
 <body>
-    <h1>Simple Calculator</h1>
+    <h1>Simple Calculator - Flask App</h1>
     <form method="post">
         <label for="num1">Number 1:</label>
         <input type="text" name="num1" required>
