--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Calculator Flask :Testing</title>
+    <title>Simple Calculator Flask :Testing another testing</title>
 </head>
 <body>
     <h1>Simple Calculator - Flask App</h1>
